# Blue

./: .gitignore  ANTHROPIC_API_FIX.md  ANTHROPIC_INTEGRATION.md  CONFIG_README.md  README.md  anthropic_config.toml  blue.py  blue_cli.py  config.example.toml  main.py  navigator_agent.py  observer_agent.py  openai_config.toml  pyproject.toml  requirements.txt  setup.py  simple_test.py  test_blue.py  test_file_changes.py  test_scenario.py  test_script.txt  validate_structure.py
agents/: __init__.py  navigator.py  observer.py  tool_agents.py
blue/: __init__.py
blue/agents/: __init__.py  base.py  intervention_agent.py  navigator.py  navigator_agent.py  observer.py
blue/config/: __init__.py  default.toml  loader.py  prompts.toml
blue/conversation/: __init__.py  chat_manager.py  feedback_processor.py  history_manager.py
blue/core/: __init__.py  decision_engine.py  feedback_system.py  llm_client.py  llm_config.py  scoring.py
blue/monitoring/: __init__.py  change_analyzer.py  codebase_monitor.py  scoring_engine.py
blue/utils/: __init__.py  file_monitor.py  patterns.py
core/: __init__.py  background_processor.py  decision_algorithm.py  workspace_graph.py
examples/: provider_switching_examples.py
integrations/: __init__.py  gdrive_integration.py  github_integration.py  jira_integration.py
tests/: __init__.py  test_decision_prompt.py  test_dynamic_decisions.py  test_navigator.py  test_scoring_system.py
utils/: __init__.py  config_manager.py  error_handler.py  provider_switcher.py
