[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "blue-cli"
version = "1.0.0"
description = "Jarvis-like workspace pair programming assistant with AutoGen multi-agent orchestration"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Blue CLI Team", email = "team@blue-cli.dev"},
]
keywords = ["ai", "assistant", "programming", "pair-programming", "workspace", "cli", "autogen"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]

dependencies = [
    "autogen>=0.2.0",
    "watchdog>=3.0.0",
    "requests>=2.31.0",
    "networkx>=3.1",
    "termcolor>=2.3.0",
    "tomli>=2.0.0",
    "tomli-w>=1.0.0",
    "openai>=1.0.0",
    "anthropic>=0.7.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
blue = "main:main"

[project.urls]
Homepage = "https://github.com/blue-cli/blue"
Repository = "https://github.com/blue-cli/blue"
Issues = "https://github.com/blue-cli/blue/issues"
Documentation = "https://github.com/blue-cli/blue/blob/main/README.md"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.hatch.build.targets.wheel]
packages = ["agents", "core", "utils", "integrations"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true